; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_maestro3.c_snd_m3_inc_timer_users.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/extr_maestro3.c_snd_m3_inc_timer_users.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_m3 = type { i32 }

@MEMTYPE_INTERNAL_DATA = common dso_local global i32 0, align 4
@KDATA_TIMER_COUNT_RELOAD = common dso_local global i32 0, align 4
@KDATA_TIMER_COUNT_CURRENT = common dso_local global i32 0, align 4
@HOST_INT_CTRL = common dso_local global i32 0, align 4
@CLKRUN_GEN_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_m3*)* @snd_m3_inc_timer_users to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_m3_inc_timer_users(%struct.snd_m3* %0) #0 {
  %2 = alloca %struct.snd_m3*, align 8
  store %struct.snd_m3* %0, %struct.snd_m3** %2, align 8
  %3 = load %struct.snd_m3*, %struct.snd_m3** %2, align 8
  %4 = getelementptr inbounds %struct.snd_m3, %struct.snd_m3* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = add nsw i32 %5, 1
  store i32 %6, i32* %4, align 4
  %7 = load %struct.snd_m3*, %struct.snd_m3** %2, align 8
  %8 = getelementptr inbounds %struct.snd_m3, %struct.snd_m3* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 1
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %29

12:                                               ; preds = %1
  %13 = load %struct.snd_m3*, %struct.snd_m3** %2, align 8
  %14 = load i32, i32* @MEMTYPE_INTERNAL_DATA, align 4
  %15 = load i32, i32* @KDATA_TIMER_COUNT_RELOAD, align 4
  %16 = call i32 @snd_m3_assp_write(%struct.snd_m3* %13, i32 %14, i32 %15, i32 240)
  %17 = load %struct.snd_m3*, %struct.snd_m3** %2, align 8
  %18 = load i32, i32* @MEMTYPE_INTERNAL_DATA, align 4
  %19 = load i32, i32* @KDATA_TIMER_COUNT_CURRENT, align 4
  %20 = call i32 @snd_m3_assp_write(%struct.snd_m3* %17, i32 %18, i32 %19, i32 240)
  %21 = load %struct.snd_m3*, %struct.snd_m3** %2, align 8
  %22 = load %struct.snd_m3*, %struct.snd_m3** %2, align 8
  %23 = load i32, i32* @HOST_INT_CTRL, align 4
  %24 = call i32 @snd_m3_inw(%struct.snd_m3* %22, i32 %23)
  %25 = load i32, i32* @CLKRUN_GEN_ENABLE, align 4
  %26 = or i32 %24, %25
  %27 = load i32, i32* @HOST_INT_CTRL, align 4
  %28 = call i32 @snd_m3_outw(%struct.snd_m3* %21, i32 %26, i32 %27)
  br label %29

29:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @snd_m3_assp_write(%struct.snd_m3*, i32, i32, i32) #1

declare dso_local i32 @snd_m3_outw(%struct.snd_m3*, i32, i32) #1

declare dso_local i32 @snd_m3_inw(%struct.snd_m3*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
